Calendar: Update headings and reset field

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <div class="container">
       <h1>Homify - Task 3</h1>
+      <h2>Calendar App (Retaining data in Local Storage)</h2>
       <div class="panel panel-default">
         <div class="panel-body">
           <input type="date" />
@@ -22,7 +23,7 @@
           </form>
 
 
-          <h2>Events:</h2>
+          <h3>Events:</h3>
           <ul id="descriptions-wrap" class="list-group">
             No events found
           </ul>
